--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     
-    <title>Hello World!</title>
+    <title>My Awesome App</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/1c9144b004.js" crossorigin="anonymous"></script>
     </head>
@@ -12,12 +12,13 @@
   <body>
     <div id="menu-bar">
       <div class="left" role="menu">
-        <button class="menubar-btn" id="menu-btn" aria-label="Open Menu"><i class="fas fa-bars"></i></button>
+        <button class="menubar-btn" id="menu-btn"><i class="fas fa-bars"></i></button>
+        <h5>My Awesome App</h5>
       </div>
       <div class="right">
-        <button class="menubar-btn" id="minimize-btn" aria-label="Minimize Window"><i class="fas fa-window-minimize"></i></button>
-        <button class="menubar-btn" id="max-unmax-btn" aria-label="Maximize-Unmaximize button"><i class="far fa-square"></i></button>
-        <button class="menubar-btn" id="close-btn" aria-label="Close Button"><i class="fas fa-times"></i></button>
+        <button class="menubar-btn" id="minimize-btn"><i class="fas fa-window-minimize"></i></button>
+        <button class="menubar-btn" id="max-unmax-btn"><i class="far fa-square"></i></button>
+        <button class="menubar-btn" id="close-btn"><i class="fas fa-times"></i></button>
       </div>
     </div>
     <div class="container">
